--- a/Web.config
+++ b/Web.config
@@ -1,21 +1,39 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0"?>
 <!--
   Para obter mais informações sobre como configurar seu aplicativo ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
+  <!--
+    Para obter uma descrição das alterações do web.config, consulte http://go.microsoft.com/fwlink/?LinkId=235367.
 
-    <system.web>
-      <compilation debug="true" targetFramework="4.7.2" />
-      <httpRuntime targetFramework="4.7.2" />
-    </system.web>
-    <system.codedom>
-        <compilers>
-      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    Os seguintes atributos podem ser definidos na marca <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.7.2" />
+      </system.Web>
+  -->
+	<appSettings>
+		<add key="strConexao" value="Database=falcon_db;Data Source=localhost;UserId=Bruno;Password=123Mudei; pooling=false"/>
+	</appSettings>
+	<system.web>
+    <compilation debug="true" targetFramework="4.7.2">
+      <assemblies>
+        <add assembly="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+      </assemblies>
+    </compilation>
+    <httpRuntime/>
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <urlMappings>
+      <add url="~/index" mappedUrl="~/Index.aspx"/>
+      <add url="~/usuario" mappedUrl="~/CadastraUsuario.aspx"/>
+    </urlMappings>
+  </system.web>
+  <system.codedom>
+    <compilers>
+      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:5 /nowarn:1659;1699;1701;612;618" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <providerOption name="CompilerVersion" value="v4.0"/>
+        <providerOption name="WarnAsError" value="false"/>
+      </compiler>
     </compilers>
-    </system.codedom>
-
+  </system.codedom>
 </configuration>
