--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
       </system.Web>
   -->
 	<appSettings>
-		<add key="strConexao" value="Database=falcon_db;Data Source=localhost;UserId=Bruno;Password=123Mudei; pooling=false"/>
+		<add key="strConexao" value="Database=falcon_db;Data Source=152.249.42.98;UserId=Bruno;Password=123Mudei; pooling=false"/>
 	</appSettings>
 	<system.web>
     <compilation debug="true" targetFramework="4.7.2">
@@ -25,13 +25,18 @@
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
     <urlMappings>
       <add url="~/index" mappedUrl="~/Index.aspx"/>
-      <add url="~/usuario" mappedUrl="~/CadastraUsuario.aspx"/>
+      <add url="~/tecnicos" mappedUrl="~/Pages/Techs/Tecnicos.aspx"/>
+	  <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx"/>
+	  <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx"/>
+	  <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx"/>
     </urlMappings>
   </system.web>
   <system.codedom>
 	  <compilers>
-		  <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-		  <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+		  <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:5 /nowarn:1659;1699;1701;612;618" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			  <providerOption name="CompilerVersion" value="v4.0"/>
+			  <providerOption name="WarnAsError" value="false"/>
+		  </compiler>
 	  </compilers>
   </system.codedom>
 </configuration>
