Adicionando validação da página Inicial, inserindo models, controllers e a inserção de dados do chamado.

--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
       </system.Web>
   -->
 	<appSettings>
-		<add key="strConexao" value="Database=falcon_db;Data Source=152.249.42.98;UserId=Bruno;Password=123Mudei; pooling=false"/>
+		<add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred"/>
 	</appSettings>
 	<system.web>
     <compilation debug="true" targetFramework="4.7.2">
@@ -29,6 +29,7 @@
 	  <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx"/>
 	  <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx"/>
 	  <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx"/>
+	  <add url="~/" mappedUrl="~/Index.aspx"/>
     </urlMappings>
   </system.web>
   <system.codedom>
