Adicionando a fetch API e realizando requisições assíncronas.

--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obter mais informações sobre como configurar seu aplicativo ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -12,32 +12,51 @@
         <httpRuntime targetFramework="4.7.2" />
       </system.Web>
   -->
-	<appSettings>
-		<add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred"/>
-	</appSettings>
-	<system.web>
+  <appSettings>
+    <add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred" />
+  </appSettings>
+  <system.web>
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
-        <add assembly="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+        <add assembly="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+        <add assembly="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=CC7B13FFCD2DDD51" />
+        <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
     </compilation>
-    <httpRuntime/>
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <httpRuntime />
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
     <urlMappings>
-      <add url="~/index" mappedUrl="~/Index.aspx"/>
-      <add url="~/tecnicos" mappedUrl="~/Pages/Techs/Tecnicos.aspx"/>
-	  <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx"/>
-	  <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx"/>
-	  <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx"/>
-	  <add url="~/" mappedUrl="~/Index.aspx"/>
+      <add url="~/index" mappedUrl="~/Index.aspx" />
+      <add url="~/tecnicos" mappedUrl="~/Pages/Techs/Tecnicos.aspx" />
+      <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx" />
+      <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx" />
+      <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx" />
+      <add url="~/" mappedUrl="~/Index.aspx" />
     </urlMappings>
   </system.web>
   <system.codedom>
-	  <compilers>
-		  <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:5 /nowarn:1659;1699;1701;612;618" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			  <providerOption name="CompilerVersion" value="v4.0"/>
-			  <providerOption name="WarnAsError" value="false"/>
-		  </compiler>
-	  </compilers>
+    <compilers>
+      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:5 /nowarn:1659;1699;1701;612;618" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <providerOption name="CompilerVersion" value="v4.0" />
+        <providerOption name="WarnAsError" value="false" />
+      </compiler>
+    </compilers>
   </system.codedom>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
