--- a/Web.config
+++ b/Web.config
@@ -21,7 +21,20 @@
         <add assembly="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
         <add assembly="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=CC7B13FFCD2DDD51" />
         <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+		<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51"/>
         <add assembly="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0E99375E54769942" />
+        <add assembly="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=A7D26565BAC4D604" />
+        <add assembly="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1CEE9F8BDE3DB106" />
+        <add assembly="K4os.Compression.LZ4, Version=1.1.11.0, Culture=neutral, PublicKeyToken=2186FA9121EF231D" />
+        <add assembly="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32CD54395057CEC3" />
+        <add assembly="K4os.Compression.LZ4.Streams, Version=1.1.11.0, Culture=neutral, PublicKeyToken=2186FA9121EF231D" />
+        <add assembly="Ubiety.Dns.Core, Version=2.2.1.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+        <add assembly="Zstandard.Net, Version=1.1.7.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+        <add assembly="System.Configuration.Install, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Drawing.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Transactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
     <httpRuntime />
@@ -32,6 +45,7 @@
       <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx" />
       <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx" />
       <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx" />
+		<add url="~/local" mappedUrl="~/Pages/Techs/Local.aspx" />
       <add url="~/" mappedUrl="~/Index.aspx" />
     </urlMappings>
   </system.web>
@@ -43,7 +57,7 @@
       </compiler>
     </compilers>
   </system.codedom>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -56,6 +70,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
