--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+	
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client.pt-br" version="5.2.7" targetFramework="net472" />
@@ -17,7 +23,13 @@
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.20" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
 </packages>
