Melhora na Fetch API, utilização do gráfico, refatoração de página e criação de controllers

--- a/Web.config
+++ b/Web.config
@@ -40,13 +40,16 @@
     <httpRuntime />
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
     <urlMappings>
-      <add url="~/index" mappedUrl="~/Index.aspx" />
-      <add url="~/tecnicos" mappedUrl="~/Pages/Techs/Tecnicos.aspx" />
-      <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx" />
-      <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx" />
-      <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx" />
-		<add url="~/local" mappedUrl="~/Pages/Techs/Local.aspx" />
-      <add url="~/" mappedUrl="~/Index.aspx" />
+        <add url="~/index" mappedUrl="~/Index.aspx" />
+        <add url="~/tecnicos" mappedUrl="~/Pages/Techs/Tecnicos.aspx" />
+        <add url="~/chamados" mappedUrl="~/Pages/Solicitante/Index.aspx" />
+		<add url="~/chamado" mappedUrl="~/Pages/Techs/Chamado.aspx" />
+		<add url="~/perfil" mappedUrl="~/Pages/Techs/Perfil.aspx" />
+        <add url="~/equipamentos" mappedUrl="~/Pages/Techs/Equipamento.aspx" />
+		<add url="~/graficos" mappedUrl="~/Pages/Techs/Graficos.aspx" />
+        <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx" />
+	    <add url="~/local" mappedUrl="~/Pages/Techs/Local.aspx" />
+        <add url="~/" mappedUrl="~/Index.aspx" />
     </urlMappings>
   </system.web>
   <system.codedom>
