--- a/Web.config
+++ b/Web.config
@@ -21,7 +21,7 @@
         <add assembly="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
         <add assembly="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=CC7B13FFCD2DDD51" />
         <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-		<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51"/>
+		<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
         <add assembly="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0E99375E54769942" />
         <add assembly="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=A7D26565BAC4D604" />
@@ -49,6 +49,7 @@
 		<add url="~/graficos" mappedUrl="~/Pages/Techs/Graficos.aspx" />
         <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx" />
 	    <add url="~/local" mappedUrl="~/Pages/Techs/Local.aspx" />
+		<add url="~/relatorios" mappedUrl="~/Pages/Techs/Relatorios.aspx" />
         <add url="~/" mappedUrl="~/Index.aspx" />
     </urlMappings>
   </system.web>
@@ -60,14 +61,7 @@
       </compiler>
     </compilers>
   </system.codedom>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -82,6 +76,17 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
