--- a/packages.config
+++ b/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
-  <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="Font.Awesome" version="5.15.1" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
