--- a/Web.config
+++ b/Web.config
@@ -13,28 +13,22 @@
       </system.Web>
   -->
   <appSettings>
-    <add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred" />
+   <!-- <add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred" /> -->
+	  <add key="strConexao" value="Database=falcon_db;Server=localhost;UserId=root;Password=12345678;SslMode=Preferred" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
         <add assembly="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
-        <add assembly="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=CC7B13FFCD2DDD51" />
         <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-		<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-		<add assembly="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
-		<add assembly="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0E99375E54769942" />
-        <add assembly="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=A7D26565BAC4D604" />
-        <add assembly="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1CEE9F8BDE3DB106" />
-        <add assembly="K4os.Compression.LZ4, Version=1.1.11.0, Culture=neutral, PublicKeyToken=2186FA9121EF231D" />
-        <add assembly="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32CD54395057CEC3" />
-        <add assembly="K4os.Compression.LZ4.Streams, Version=1.1.11.0, Culture=neutral, PublicKeyToken=2186FA9121EF231D" />
-        <add assembly="Ubiety.Dns.Core, Version=2.2.1.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
-        <add assembly="Zstandard.Net, Version=1.1.7.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+        <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+        <add assembly="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Configuration.Install, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Drawing.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Transactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.ComponentModel.DataAnnotations, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
     <httpRuntime />
@@ -55,13 +49,10 @@
   </system.web>
   <system.codedom>
     <compilers>
-      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:5 /nowarn:1659;1699;1701;612;618" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-        <providerOption name="CompilerVersion" value="v4.0" />
-        <providerOption name="WarnAsError" value="false" />
-      </compiler>
+      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
-	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -79,6 +70,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
