Subindo o FalconDex futuro

--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,8 @@
       </system.Web>
   -->
   <appSettings>
-    <add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred" />
+	  <!--add key="strConexao" value="Database=falcon_db;Server=falcondb.mysql.database.azure.com;UserId=Bruno@falcondb;Password=123Mudei1;SslMode=Preferred" /-->
+	  <add key="strConexao" value="Database=falcon_db;Server=localhost;UserId=root;Password=TYASQgwfws@#1250;SslMode=Preferred" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2">
