adicionando o service worker e a página de erro 500

--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,10 @@
     <add key="strConexao" value="Database=falcon_db;Server=localhost;UserId=root;Password=TYASQgwfws@#1250;SslMode=Preferred" />
   </appSettings>
   <system.web>
+	<customErrors mode="On" redirectMode="ResponseRewrite">
+		<error statusCode="404" redirect="~/Pages/Techs/Offline.aspx"/>
+		<error statusCode="500" redirect="~/Pages/Techs/Offline.aspx"/>
+	</customErrors>
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
         <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
@@ -51,6 +55,7 @@
       <add url="~/inicio" mappedUrl="~/Pages/Techs/Index.aspx" />
       <add url="~/local" mappedUrl="~/Pages/Techs/Local.aspx" />
       <add url="~/relatorios" mappedUrl="~/Pages/Techs/Relatorios.aspx" />
+	  <add url="~/offline" mappedUrl="~/Pages/Techs/Offline.aspx" />
       <add url="~/" mappedUrl="~/Index.aspx" />
     </urlMappings>
   </system.web>
