--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
       </system.Web>
   -->
   <appSettings>
-    <add key="strConexao" value="Database=falcon_db;Server=localhost;UserId=root;Password=TYASQgwfws@#1250;SslMode=Preferred" />
+    <add key="strConexao" value="Database=falcon_db;Server=localhost;UserId=bruno;Password=BrunoST43;SslMode=Preferred" />
   </appSettings>
   <system.web>
 	<customErrors mode="On" redirectMode="ResponseRewrite">
